--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "echarts": "5.3.2",
         "element-plus": "2.2.30",
         "highlight.js": "^10.6.0",
+        "less": "^4.1.3",
         "marked": "^2.0.0",
         "mitt": "^3.0.0",
         "nprogress": "^0.2.0",
